--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "external/glm"]
 	path = external/glm
-	url = https://github.com/g-truc/glm
+	url = https://github.com/ReccaStudio/glm
 [submodule "assets"]
 	path = assets
-	url = https://github.com/SaschaWillems/Vulkan-Assets
+	url = https://github.com/ReccaStudio/Vulkan-Assets
 	branch = main
